tests/snapshots/explicit_override__override_disabled_explain.snap
---
source: tests/explicit_override.rs
expression: "support::stderr_text(&output)"
---
Nerd Font explicitly disabled by NERD_FONT override
