tests/snapshots/explicit_override__override_disabled_json.snap
---
source: tests/explicit_override.rs
expression: "support::stdout_json_snapshot(&output)"
---
{
  "confidence": "certain",
  "config_path": null,
  "detected": false,
  "font": null,
  "profile": null,
  "source": "explicit_disable",
  "terminal": null
}
