tests/snapshots/explicit_override__override_enabled_explain.snap
---
source: tests/explicit_override.rs
expression: "support::stderr_text(&output)"
---
detected Nerd Font from NERD_FONT override
